<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_AlarmInfo" Id="{b6274670-819a-0d01-0a2f-6b2a5a9fefcb}">
    <Declaration><![CDATA[TYPE ST_AlarmInfo :
STRUCT
	Name			: Tc2_System.T_MaxString;
	Id				: T_ArrayIndexer;
	Message			: Tc2_System.T_MaxString;
	IsActive		: BOOL;
	IsAcknowledged	: BOOL;
	TimeInfos		: ST_AlarmTimeInfos;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>